--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="column">
       <section>
         <h2>Summary</h2>
-        <p>I am computer science undergrad with 2 year experience in web and mobile app development. I am always in search of reading, learning and doing new things.  I am looking for internship opportunities to hone technical my skill.</p>
+        <p>I am computer science undergrad with 2 year experience in web and mobile app development. I am always in search of reading, learning and doing new things.  I am looking for internship opportunities to hone my technical skill by providing real time useful work.</p>
       </section>
       <section>
         <h2>Projects</h2>
