--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="column">
       <section>
         <h2>Summary</h2>
-        <p>I am computer science undergrad with 2 year experience in web and mobile app development. I am always in search of reading, learning and doing new things.  I am looking for internship opportunities to hone my technical skill by providing real time useful work.</p>
+        <p>I am 3rd year computer science undergrad. I am always in search of reading, learning and doing new things.  I am looking for internship opportunities to hone my technical skill by providing real time useful work.</p>
       </section>
       <section>
         <h2>Projects</h2>
@@ -65,7 +65,7 @@
             <h3>Bachelor of Engineering <small style="color: #555">Pursuing</small> </h3>
             <p><em>Sir M Visvesvaraya Institute of Technology, Bangalore, Karnataka</em></p>
             <ul>
-              <li>Average CGPA 1st, 2nd, 3rd semester: 7.2</li>
+              <li>Average CGPA 1st, 2nd, 3rd, 4th  semester: 7.4</li>
               <li>Graduation Year: 2020</li>
             </ul>
           </div>
@@ -93,16 +93,19 @@
       </section>
       <section>
         <h2>Key Skills</h2>
-        <ul>
+        <ul><li>Machine Learning</li>
+    	  <li>TensorFlow</li>
+    	  <li>Keras</li>
+          <li>Python</li>
+          <li>ComputerVision</li>
+          <li>Amazon AWS and Azure</li>
+
           <li>Web Development</li>
           <li>PHP, Node.js</li>
           <li>SQL, MongoDB</li>
           <li>ResponsiveDesign  Bootstrap</li>
           <li>Java</li>
           <li>Android App Development</li>
-          <li>Python</li>
-          <li>ComputerVision</li>
-          <li>Amazon AWS</li>
         </ul>
       </section>
     </div>
