--- a/index.html
+++ b/index.html
@@ -12,10 +12,20 @@
     <div class="column">
       <section>
         <h2>Summary</h2>
-        <p>I am 3rd year computer science undergrad. I am always in search of reading, learning and doing new things.  I am looking for internship opportunities to hone my technical skill by providing real time useful work.</p>
+        <p>I am 3rd year computer science undergrad.I am looking for internship opportunities to hone my technical skill by providing real time useful work.</p>
       </section>
       <section>
         <h2>Projects</h2>
+        <div class="timeline">
+          <span class="line"></span>
+          <div class="timeline-item">
+            <h3>Criminal Database Visualizer</h3>
+            <p><em>DBMS project with d3.js on frontend DJANGO on backend focusing on ease of use, clean design and normalization of database</em></p>
+            <ul>
+              <li><a href="https://github.com/Vibhor199/crimeDB">https://github.com/Vibhor199/crimeDB</a></li>
+            </ul>
+          </div>
+        </div>
         <div class="timeline">
           <span class="line"></span>
           <div class="timeline-item">
@@ -23,6 +33,16 @@
             <p><em>A computer vision project made using python, opencv, SciKitLearn. Detects bored and sleepy faces, meant to be used at offices and schools to estimate productivity</em></p>
             <ul>
               <li><a href="https://github.com/Vibhor199/Int_Vision">https://github.com/Vibhor199/Int_Vision</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="timeline">
+          <span class="line"></span>
+          <div class="timeline-item">
+            <h3>Solar Energy Estimation</h3>
+            <p><em>Local winning project at Nasa Space Apps Challenge Bangalore, aims at providing power estimates for solar power usage and adoption</em></p>
+            <ul>
+              <li><a href="https://github.com/Vibhor199/space">https://github.com/Vibhor199/space</a></li>
             </ul>
           </div>
         </div>
@@ -39,16 +59,6 @@
         <div class="timeline">
           <span class="line"></span>
           <div class="timeline-item">
-            <h3>Student Information Systems</h3>
-            <p><em>A student management system using Mysqli in PHP, frontend in HTML, CSS, JS</em></p>
-            <ul>
-              <li><a href="https://github.com/SirMvit-sis/SIS-SirMvit">https://github.com/SirMvit-sis/SIS-SirMvit</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="timeline">
-          <span class="line"></span>
-          <div class="timeline-item">
             <h3>GLUG MVIT Website</h3>
             <p><em>Contribution to website of college Free Software club GLUG MVIT</em></p>
             <ul>
@@ -57,6 +67,29 @@
           </div>
         </div>
       </section>
+
+            <section>
+              <h2>Achievements</h2>
+
+              <div class="timeline">
+                <span class="line"></span>
+                <div class="timeline-item">
+                  Winner at ValuePitch Hackathon, Bangalore
+                </div>
+              </div>
+              <div class="timeline">
+                <span class="line"></span>
+                <div class="timeline-item">
+                  Winner at NASA Space apps challenge, Bangalore
+                </div>
+              </div>
+
+
+
+            </section>
+
+
+
       <section>
         <h2>Education</h2>
         <div class="timeline">
@@ -65,8 +98,19 @@
             <h3>Bachelor of Engineering <small style="color: #555">Pursuing</small> </h3>
             <p><em>Sir M Visvesvaraya Institute of Technology, Bangalore, Karnataka</em></p>
             <ul>
-              <li>Average CGPA 1st, 2nd, 3rd, 4th  semester: 7.4</li>
+              <li>Average CGPA 1st, 2nd, 3rd, 4th  semester: 7.4/10</li>
               <li>Graduation Year: 2020</li>
+            </ul>
+          </div>
+        </div>
+        <div class="timeline">
+          <span class="line"></span>
+          <div class="timeline-item">
+            <h3>Schooling</h3>
+            <p><em>Dr. V.S.E.C Kidwai Nagar</em></p>
+            <ul>
+              <li>10th: 89.5%  12th: 90%</li>
+              <li>Passing Year: 2015</li>
             </ul>
           </div>
         </div>
@@ -92,18 +136,19 @@
 
       </section>
       <section>
-        <h2>Key Skills</h2>
-        <ul><li>Machine Learning</li>
-    	  <li>TensorFlow</li>
-    	  <li>Keras</li>
+        <h2>Skills</h2>
+        <ul>
+        <li>Databases(relational and object based)</li>
+    	  <li>Algorithms</li>
+    	  <li>Networks</li>
           <li>Python</li>
-          <li>ComputerVision</li>
+          <li>Basic ML Algorithms</li>
+          <li>ML Libraries using Python</li>
+          <li>ComputerVision(OpenCV)</li>
           <li>Amazon AWS and Azure</li>
-
-          <li>Web Development</li>
-          <li>PHP, Node.js</li>
-          <li>SQL, MongoDB</li>
+          <li>PHP, Node.js, DJANGO</li>
           <li>ResponsiveDesign  Bootstrap</li>
+          <li>Git</li>
           <li>Java</li>
           <li>Android App Development</li>
         </ul>
