--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="column">
       <section>
         <h2>Summary</h2>
-        <p>I am 3rd year computer science undergrad.I am looking for internship opportunities to hone my technical skill by providing real time useful work.</p>
+        <p>I am 3rd year computer science BTech undergrad (6th sem).I am looking for internship opportunities to hone my technical skill by providing real time useful work. I am available from 15 January 2019.</p>
       </section>
       <section>
         <h2>Projects</h2>
@@ -98,7 +98,7 @@
             <h3>Bachelor of Engineering <small style="color: #555">Pursuing</small> </h3>
             <p><em>Sir M Visvesvaraya Institute of Technology, Bangalore, Karnataka</em></p>
             <ul>
-              <li>Average CGPA 1st, 2nd, 3rd, 4th  semester: 7.4/10</li>
+              <li>Average CGPA 1st and 2nd Year: 7.4/10</li>
               <li>Graduation Year: 2020</li>
             </ul>
           </div>
@@ -130,7 +130,12 @@
             <p style="font-size: 13px">vibhorsharma197@gmail.com</p>
           </div>
           <div class="timeline-item">
+            <h4>LinkedIn:</h4>
             <a href="https://www.linkedin.com/in/vibhor-sharma-40a458146">https://www.linkedin.com/in/vibhor-sharma-40a458146</a>
+          </div>
+          <div class="timeline-item">
+            <h4>Github:</h4>
+            <a href="https://github.com/Vibhor199/">https://github.com/Vibhor199/</a>
           </div>
         </div>
 
@@ -138,19 +143,31 @@
       <section>
         <h2>Skills</h2>
         <ul>
-        <li>Databases(relational and object based)</li>
+        <li><strong>Core</strong></li>
+        <li>Databases(relational-SQL and object based)</li>
     	  <li>Algorithms</li>
     	  <li>Networks</li>
-          <li>Python</li>
-          <li>Basic ML Algorithms</li>
-          <li>ML Libraries using Python</li>
-          <li>ComputerVision(OpenCV)</li>
-          <li>Amazon AWS and Azure</li>
-          <li>PHP, Node.js, DJANGO</li>
-          <li>ResponsiveDesign  Bootstrap</li>
-          <li>Git</li>
-          <li>Java</li>
-          <li>Android App Development</li>
+        <li>Cloud Architecture</li>
+        <li>Software design and Architecture</li>
+        <li>Object Oriented Programming</li>
+        <li>Operating Systems</li>
+        <li>Basic ML Algorithms</li>
+        <li><br></li>
+        <li><strong>Hands-on experience with</strong></li>
+        <li>Git</li>
+        <li>PHP, Node.js, DJANGO</li>
+        <li>Amazon AWS and Azure</li>
+        <li>Full Stack Development</li>
+        <li>ComputerVision</li>
+        <li>Android App Development</li>
+        <li><br></li>
+        <li><strong>Libraries</strong></li>
+          <li>Python: Scikit-Learn, OpenCV, Numpy, MatplotLib and other basic Libraries</li>
+          <li>JavaScript:Bootstrap, D3.JS, React.js, Phazor, Jquery and Ajax</li>
+          <li><br></li>
+          <li><strong>Languages Used</strong></li>
+          <li>Python,Java, C++</li>
+          <li>JavaScript</li>
         </ul>
       </section>
     </div>
