--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
         <li>Software design and Architecture</li>
         <li>Object Oriented Programming</li>
         <li>Operating Systems</li>
+        <li>LINUX</li>
         <li>Basic ML Algorithms</li>
         <li><br></li>
         <li><strong>Hands-on experience with</strong></li>
