--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
             <p><em>A computer vision project made using python, opencv, SciKitLearn. Detects bored and sleepy faces, meant to be used at offices and schools to estimate productivity</em></p>
             <ul>
               <li><a href="https://github.com/Vibhor199/Int_Vision">https://github.com/Vibhor199/Int_Vision</a></li>
+              <li>Video Demo</li>
+              <li><a href="https://youtu.be/SggBRKqACWs">https://youtu.be/SggBRKqACWs</a></li>
             </ul>
           </div>
         </div>
