--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="column">
       <section>
         <h2>Summary</h2>
-        <p>I am 3rd year computer science BTech undergrad (6th sem).I am looking for internship opportunities to hone my technical skill by providing real time useful work. I am well-versed with Full Stack Development accompanied with necessary knowledge for Software Development like Database, Networking Protocols and Machine Learning application. I am available for work from 15 January 2019.</p>
+        <p>I am 3rd year computer science BTech undergrad (6th sem).I am looking for internship opportunities to hone my technical skill by providing real time useful work. I am well-versed with Full Stack Development accompanied with necessary knowledge for Software Development like Database, Networking and Machine Learning applications.</p>
       </section>
       <section>
         <h2>Projects</h2>
