--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@
     <div class="column">
       <section>
         <h2>Summary</h2>
-        <p>I am 3rd year computer science BTech undergrad (6th sem).I am looking for internship opportunities to hone my technical skill by providing real time useful work. I am well-versed with Full Stack Development accompanied with necessary knowledge for Software Development like Database, Networking and Machine Learning applications.</p>
+        <p>I am 3rd year computer science BTech undergrad (7th sem).I am looking for internship opportunities to hone my technical skill by providing real time useful work. I am well-versed with Software Development accompanied with necessary knowledge like Database, Networks, Operating-System and Machine Learning applications with Tensorflow, Scipy, Numpy, OpenCV etc.</p>
       </section>
       <section>
         <h2>Projects</h2>
         <div class="timeline">
           <span class="line"></span>
           <div class="timeline-item">
-            <h3>Criminal Database Visualizer</h3>
-            <p><em>DBMS project with d3.js on frontend DJANGO on backend focusing on ease of use, clean design and normalization of database</em></p>
+            <h3>Interest-Net</h3>
+            <p><em>Offline improvement to below project, using Tensorflow and Keras. Using custom top layer neural-net model on top of vgg16. Eliminates the dependency on Azure api.</em></p>
             <ul>
-              <li><a href="https://github.com/Vibhor199/crimeDB">https://github.com/Vibhor199/crimeDB</a></li>
+              <li><a href="https://github.com/Vibhor199/neuralnet">https://github.com/Vibhor199/neuralnet</a></li>
+              <li>Video Demo</li>
+              <li><a href="https://youtu.be/SggBRKqACWs">https://youtu.be/SggBRKqACWs</a></li>
             </ul>
           </div>
         </div>
@@ -30,11 +32,19 @@
           <span class="line"></span>
           <div class="timeline-item">
             <h3>INT-Vision</h3>
-            <p><em>A computer vision project made using python, opencv, SciKitLearn. Detects bored and sleepy faces, meant to be used at offices and schools to estimate productivity</em></p>
+            <p><em>A computer vision project made using python, opencv, SciKitLearn. Detects bored and sleepy faces, meant to be used at offices and schools to estimate productivity. Uses emotion values from Azure api and classifies them using SVM classifier.</em></p>
             <ul>
               <li><a href="https://github.com/Vibhor199/Int_Vision">https://github.com/Vibhor199/Int_Vision</a></li>
-              <li>Video Demo</li>
-              <li><a href="https://youtu.be/SggBRKqACWs">https://youtu.be/SggBRKqACWs</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="timeline">
+          <span class="line"></span>
+          <div class="timeline-item">
+            <h3>Criminal Database Visualizer</h3>
+            <p><em>DBMS project with d3.js on frontend DJANGO on backend focusing on ease of use, clean design and normalization of database</em></p>
+            <ul>
+              <li><a href="https://github.com/Vibhor199/crimeDB">https://github.com/Vibhor199/crimeDB</a></li>
             </ul>
           </div>
         </div>
@@ -61,18 +71,16 @@
         <div class="timeline">
           <span class="line"></span>
           <div class="timeline-item">
-            <h3>GLUG MVIT Website</h3>
-            <p><em>Contribution to website of college Free Software club GLUG MVIT</em></p>
+            <h3>OPEN-GL graphics project (Freeglut3)</h3>
+            <p><em>College Project for demonstration of GLUT library, interactive cube filled with gas molecules.</em></p>
             <ul>
-              <li><a href="http://glugmvit.herokuapp.com/">http://glugmvit.herokuapp.com/</a></li>
+              <li><a href="https://github.com/Vibhor199/CGProject">https://github.com/Vibhor199/CGProject</a></li>
             </ul>
           </div>
         </div>
       </section>
-
             <section>
               <h2>Achievements</h2>
-
               <div class="timeline">
                 <span class="line"></span>
                 <div class="timeline-item">
@@ -85,13 +93,7 @@
                   Winner at NASA Space apps challenge, Bangalore
                 </div>
               </div>
-
-
-
             </section>
-
-
-
       <section>
         <h2>Education</h2>
         <div class="timeline">
@@ -100,7 +102,7 @@
             <h3>Bachelor of Engineering <small style="color: #555">Pursuing</small> </h3>
             <p><em>Sir M Visvesvaraya Institute of Technology, Bangalore, Karnataka</em></p>
             <ul>
-              <li>Average CGPA 1st and 2nd Year: 7.4/10</li>
+              <li>Average CGPA 1st and 2nd Year and 3rd year beginning semester: 7.4/10</li>
               <li>Graduation Year: 2020</li>
             </ul>
           </div>
@@ -154,23 +156,24 @@
         <li>Object Oriented Programming</li>
         <li>Operating Systems</li>
         <li>LINUX</li>
-        <li>Basic ML Algorithms</li>
+        <li>ML Algorithms(Neural Networks, K-means, SVM, Logistic and Linear Regression etc..from AndrewNG courses)</li>
         <li><br></li>
         <li><strong>Hands-on experience with</strong></li>
         <li>Git</li>
+        <li>Tensorflow python</li>
         <li>PHP, Node.js, DJANGO</li>
-        <li>Amazon AWS and Azure</li>
+        <li>Amazon AWS(Python sdk boto3) and Azure</li>
         <li>Full Stack Development</li>
-        <li>ComputerVision</li>
+        <li>ComputerVision(OpenCV other Deep-nets, CNN application like vgg16 etc)</li>
         <li>Android App Development</li>
         <li><br></li>
         <li><strong>Libraries</strong></li>
-          <li>Python: Scikit-Learn, OpenCV, Numpy, MatplotLib and other basic Libraries</li>
+          <li>Python: Scikit-Learn, OpenCV, Numpy, MatplotLib, Tensorflow and Keras(on top of Tensorflow)</li>
           <li>JavaScript:Bootstrap, D3.JS, React.js, Phazor, Jquery and Ajax</li>
           <li><br></li>
           <li><strong>Languages Used</strong></li>
-          <li>Python,Java, C++</li>
-          <li>JavaScript</li>
+          <li>Java, C++(In order of expertise)</li>
+          <li>Python, JavaScript</li>
         </ul>
       </section>
     </div>
