--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="column">
       <section>
         <h2>Summary</h2>
-        <p>I am 3rd year computer science BTech undergrad (7th sem).I am looking for internship opportunities to hone my technical skill by providing real time useful work. I am well-versed with Software Development accompanied with necessary knowledge like Database, Networks, Operating-System and Machine Learning applications with Tensorflow, Scipy, Numpy, OpenCV etc.</p>
+        <p>I am 3rd year computer science BTech undergrad <b>(7th sem during internship period)</b>.I am looking for <b>internship</b> opportunities to hone my technical skill by providing real time useful work. I am well-versed with Software Development accompanied with necessary knowledge like <b>Database, Networks, Operating-System</b> and <b>Machine Learning</b> applications with <b>Tensorflow, Scipy, Numpy, OpenCV</b> etc.</p>
       </section>
       <section>
         <h2>Projects</h2>
@@ -20,7 +20,7 @@
           <span class="line"></span>
           <div class="timeline-item">
             <h3>Interest-Net</h3>
-            <p><em>Offline improvement to below project, using Tensorflow and Keras. Using custom top layer neural-net model on top of vgg16. Eliminates the dependency on Azure api.</em></p>
+            <p><em>Offline improvement to below project, using <b>Tensorflow and Keras</b>. Using <b>custom top layer neural-net</b> model on top of <b>vgg16</b>. Eliminates the dependency on Azure api.</em></p>
             <ul>
               <li><a href="https://github.com/Vibhor199/neuralnet">https://github.com/Vibhor199/neuralnet</a></li>
               <li>Video Demo</li>
@@ -32,7 +32,7 @@
           <span class="line"></span>
           <div class="timeline-item">
             <h3>INT-Vision</h3>
-            <p><em>A computer vision project made using python, opencv, SciKitLearn. Detects bored and sleepy faces, meant to be used at offices and schools to estimate productivity. Uses emotion values from Azure api and classifies them using SVM classifier.</em></p>
+            <p><em>A computer vision project made using <b>python, opencv, SciKitLearn</b>. Detects bored and sleepy faces, meant to be used at offices and schools to estimate productivity. Uses emotion values from <b>Azure api</b> and classifies them using <b>SVM classifier</b>.</em></p>
             <ul>
               <li><a href="https://github.com/Vibhor199/Int_Vision">https://github.com/Vibhor199/Int_Vision</a></li>
             </ul>
@@ -42,7 +42,7 @@
           <span class="line"></span>
           <div class="timeline-item">
             <h3>Criminal Database Visualizer</h3>
-            <p><em>DBMS project with d3.js on frontend DJANGO on backend focusing on ease of use, clean design and normalization of database</em></p>
+            <p><em>DBMS project with <b>d3.js</b> on frontend <b>DJANGO</b> on backend focusing on ease of use, clean design and <b>normalization</b> of database</em></p>
             <ul>
               <li><a href="https://github.com/Vibhor199/crimeDB">https://github.com/Vibhor199/crimeDB</a></li>
             </ul>
@@ -52,7 +52,7 @@
           <span class="line"></span>
           <div class="timeline-item">
             <h3>Solar Energy Estimation</h3>
-            <p><em>Local winning project at Nasa Space Apps Challenge Bangalore, aims at providing power estimates for solar power usage and adoption</em></p>
+            <p><em>Local winning project at <b>Nasa Space Apps</b> Challenge Bangalore, aims at providing power estimates for solar power usage and adoption</em></p>
             <ul>
               <li><a href="https://github.com/Vibhor199/space">https://github.com/Vibhor199/space</a></li>
             </ul>
@@ -62,7 +62,7 @@
           <span class="line"></span>
           <div class="timeline-item">
             <h3>Tank War JavaScript game</h3>
-            <p><em>Simple JavaScript game using Phazor library</em></p>
+            <p><em>Simple JavaScript game using <b>Phazor</b> library</em></p>
             <ul>
               <li><a href="https://vibhor199.github.io/Tank2DGameInPhaser/">https://vibhor199.github.io/Tank2DGameInPhaser/</a></li>
             </ul>
@@ -72,7 +72,7 @@
           <span class="line"></span>
           <div class="timeline-item">
             <h3>OPEN-GL graphics project (Freeglut3)</h3>
-            <p><em>College Project for demonstration of GLUT library, interactive cube filled with gas molecules.</em></p>
+            <p><em>College Project for demonstration of GLUT library(<b>OpenGL</b>), interactive cube filled with gas molecules.</em></p>
             <ul>
               <li><a href="https://github.com/Vibhor199/CGProject">https://github.com/Vibhor199/CGProject</a></li>
             </ul>
@@ -131,7 +131,7 @@
             <p style="font-size: 15px">+91-9741117346</p>
           </div>
           <div class="timeline-item">
-            <p style="font-size: 13px">vibhorsharma197@gmail.com</p>
+            <p style="font-size: 13px"><b>vibhorsharma197@gmail.com</b></p>
           </div>
           <div class="timeline-item">
             <h4>LinkedIn:</h4>
