--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="column">
       <section>
         <h2>Summary</h2>
-        <p>I am 3rd year computer science BTech undergrad <b>(7th sem during internship period)</b>.I am looking for <b>internship</b> opportunities to hone my technical skill by providing real time useful work. I am well-versed with Software Development accompanied with necessary knowledge like <b>Database, Networks, Operating-System</b> and <b>Machine Learning</b> applications with <b>Tensorflow, Scipy, Numpy, OpenCV</b> etc.</p>
+        <p>I am 3rd year<b>(6th sem)</b> computer science BTech undergrad <b>(7th sem during internship period)</b>.I am looking for <b>internship</b> opportunities to hone my technical skill by providing real time useful work. I am well-versed with Software Development accompanied with necessary knowledge like <b>Database, Networks, Operating-System</b> and <b>Machine Learning</b> applications with <b>Tensorflow, Scipy, Numpy, OpenCV</b> etc.</p>
       </section>
       <section>
         <h2>Projects</h2>
