Added work samples

--- a/index.html
+++ b/index.html
@@ -78,6 +78,20 @@
             </ul>
           </div>
         </div>
+        <div class="timeline">
+          <span class="line"></span>
+          <div class="timeline-item">
+            <h3>Other Work Samples</h3>
+            <ul>
+              <li><b>Mask RCNN for object detection on Nucleus dataset</b></li>
+              <li><a href="https://github.com/Vibhor199/MaskRCNN-on-Nucleus">https://github.com/Vibhor199/MaskRCNN-on-Nucleus</a></li>
+
+              <li><b>Android recycler view</b></li>
+              <li><a href="https://github.com/Vibhor199/recyclerview">https://github.com/Vibhor199/recyclerview</a></li>
+
+            </ul>
+          </div>
+        </div>
       </section>
             <section>
               <h2>Achievements</h2>
