--- a/index.html
+++ b/index.html
@@ -12,10 +12,18 @@
     <div class="column">
       <section>
         <h2>Summary</h2>
-        <p>I am 3rd year<b>(6th sem)</b> computer science BTech undergrad <b>(7th sem during internship period)</b>.I am looking for <b>internship</b> opportunities to hone my technical skill by providing real time useful work. I am well-versed with Software Development accompanied with necessary knowledge like <b>Database, Networks, Operating-System</b> and <b>Machine Learning</b> applications with <b>Tensorflow, Scipy, Numpy, OpenCV</b> etc.</p>
+        <p>I am 4th year<b>(7th sem)</b> computer science BTech undergrad.I have a good knowledge of algorithms, data structures and problem solving. I am compatible with various operating systems and Linux Shell Programming. I have used SQL and applied concepts like database normalization to my projects. I have learned multiple Machine Learning Algorithms and Tools and i am currently working as a Machine Learning Intern at BetterHalf.AI</p>
       </section>
       <section>
-        <h2>Projects</h2>
+	<h2>Work</h2>
+	<div class="timeline">
+          <span class="line"></span>
+          <div class="timeline-item">
+            <h3>Machine Learning Intern at Betterhalf.ai(04-July-2019 to Present)</h3>
+            <p><em>I am currently making models for various types of company data and for matching people based on traits.</em></p>
+          </div>
+        </div>        
+	<h2>Projects</h2>
         <div class="timeline">
           <span class="line"></span>
           <div class="timeline-item">
@@ -23,8 +31,6 @@
             <p><em>Offline improvement to below project, using <b>Tensorflow and Keras</b>. Using <b>custom top layer neural-net</b> model on top of <b>vgg16</b>. Eliminates the dependency on Azure api.</em></p>
             <ul>
               <li><a href="https://github.com/Vibhor199/neuralnet">https://github.com/Vibhor199/neuralnet</a></li>
-              <li>Video Demo</li>
-              <li><a href="https://youtu.be/SggBRKqACWs">https://youtu.be/SggBRKqACWs</a></li>
             </ul>
           </div>
         </div>
@@ -35,7 +41,10 @@
             <p><em>A computer vision project made using <b>python, opencv, SciKitLearn</b>. Detects bored and sleepy faces, meant to be used at offices and schools to estimate productivity. Uses emotion values from <b>Azure api</b> and classifies them using <b>SVM classifier</b>.</em></p>
             <ul>
               <li><a href="https://github.com/Vibhor199/Int_Vision">https://github.com/Vibhor199/Int_Vision</a></li>
-            </ul>
+                            <li>Video Demo</li>
+              <li><a href="https://youtu.be/SggBRKqACWs">https://youtu.be/SggBRKqACWs</a></li>
+
+	    </ul>
           </div>
         </div>
         <div class="timeline">
