--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
               <div class="timeline">
                 <span class="line"></span>
                 <div class="timeline-item">
-                  Winner at ValuePitch Hackathon, Bangalore
+                  2nd prize Winner at ValuePitch Hackathon, Bangalore
                 </div>
               </div>
               <div class="timeline">
                 <span class="line"></span>
                 <div class="timeline-item">
-                  Winner at NASA Space apps challenge, Bangalore
+                  Winner at NASA Space apps challenge, Bangalore Level
                 </div>
               </div>
             </section>
