--- a/index.html
+++ b/index.html
@@ -12,111 +12,115 @@
     <div class="column">
       <section>
         <h2>Summary</h2>
-        <p>I am 4th year<b>(7th sem)</b> computer science BTech undergrad.I have a good knowledge of algorithms, data structures and problem solving. I am compatible with various operating systems and Linux Shell Programming. I have used SQL and applied concepts like database normalization to my projects. I have learned multiple Machine Learning Algorithms and Tools and i am currently working as a Machine Learning Intern at BetterHalf.AI</p>
+        <p>I am 4th year<b>(8th sem/final semester)</b> Computer Science BTech undergrad.
+          I have a good knowledge of algorithms, data structures and problem solving.
+           Along with this i have worked on projects related to Backend Development and Machine Learning.
+           I am looking for full time fresher positions in Software Development and related roles. </p>
       </section>
       <section>
-	<h2>Work</h2>
+	<h2>Internship(9 months)</h2>
+  <h5>Company: Betterhalf.AI</h5>
+  <h5>Period: July-19 to November-19, January-20 to present</h5>
 	<div class="timeline">
-          <span class="line"></span>
+          <!-- <span class="line"></span> -->
           <div class="timeline-item">
-            <h3>Machine Learning Intern at Betterhalf.ai(04-July-2019 to Present)</h3>
-            <p><em>I am currently making models for various types of company data and for matching people based on traits.</em></p>
+            <h3>Onboarding API</h3>
+            <ul>
+            <em>
+            <li>
+              After some analysis of user data, i found that ML can be used to help people
+              fill their details on our marriage portal. I was given the task of fully developing this feature.
+              To help reduce onboarding time which can be huge for marriage portals.
+            </li>
+            <li>
+              Completed the development of <b>flask</b> based apis using best practices like <b>PEP8</b>,
+               <b>pylint</b> in <b>Pycharm</b>. </li>
+            <li>Used <b>ORM sqlalchemy</b> and <b>Marshmallow as serializer</b>.
+            </li>
+            <li>These API's are to run ML Models on small amount of user data like age
+               and name and use it to get religion, mother_tongue and most likely partner preferences of the user.
+            </li>
+            <li> Learned about <b>scalable deployment architecture</b> and load distribution among processing nodes.
+               Learned <b>Redis</b> for key value in-memory storage and <b>Celery</b> for job scheduling.
+            </li>
+            <li>Used postman for saving and documenting the API and learned <b>PyTest</b> to write tests for them.
+              Also learned how these thing can prevent issues in long run.
+             </li>
+             <li>Models developed were in <b>Tensorflow</b> and <b>SciKitLearn</b> for the above APIs.
+               <b>LSTM based RNN</b>, <b>Random Forest</b>, <b>K Nearest Neighbors</b> were some of the models used.
+             </li>
+             <li><b>Result : </b>Reduced onboarding to few clicks. User retention was increased.</li>
+             <br>
+             </em>
+
+             <h4></h4>
+
+            </ul>
           </div>
-        </div>        
-	<h2>Projects</h2>
+          <div class="timeline-item">
+            <h3>Image Validation</h3>
+            <em>
+           <ul><li>It was important to validate user images for inappropriate content and mismatch in gender.</li>
+           <li>I worked on image based ML Models for purposes like NSFW detection, Human face detection,
+             Gender detection. Learned about <b>Inception</b> and <b>Vgg</b> Models.
+           </li></ul>
+           </em>
+          </div>
+        </div>
+	<h2>Other Personal Projects</h2>
+
         <div class="timeline">
           <span class="line"></span>
           <div class="timeline-item">
-            <h3>Interest-Net</h3>
+            <h4>Criminal Database Visualizer</h4>
+            <p><em>DBMS project with <b>d3.js</b> on frontend <b>DJANGO</b> on backend
+              focusing on ease of use, clean design and <b>normalization</b> of database.
+              Learned a lot about backend development through tutorials before this project,
+              <b>about views, API, url routing, about templates and templating language Jinja2,
+                about Models ORM, Querysets and Serialization Deserialization, Middlewares, Mixins, Django Rest Framework, Viewsets etc.</b></em></p>
+            <ul>
+              <li><a href="https://github.com/Vibhor199/crimeDB">https://github.com/Vibhor199/crimeDB</a></li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="timeline">
+          <span class="line"></span>
+          <div class="timeline-item">
+            <h4>INT-Vision</h4>
+            <p><em>A computer vision project made using <b>python, opencv, SciKitLearn</b>. Detects bored and sleepy faces, meant to be used at offices and schools to estimate productivity. Uses emotion values from <b>Azure api</b> and classifies them using <b>SVM classifier</b>.</em></p>
+            <ul>
+              <li><a href="https://github.com/Vibhor199/Int_Vision">https://github.com/Vibhor199/Int_Vision</a></li>
+              <li><b>Video Demo :</b><a href="https://youtu.be/SggBRKqACWs">https://youtu.be/SggBRKqACWs</a></li>
+	          </ul>
+          </div>
+        </div>
+
+        <div class="timeline">
+          <span class="line"></span>
+          <div class="timeline-item">
+            <h4>Interest-Net</h4>
             <p><em>Offline improvement to below project, using <b>Tensorflow and Keras</b>. Using <b>custom top layer neural-net</b> model on top of <b>vgg16</b>. Eliminates the dependency on Azure api.</em></p>
             <ul>
               <li><a href="https://github.com/Vibhor199/neuralnet">https://github.com/Vibhor199/neuralnet</a></li>
             </ul>
           </div>
         </div>
-        <div class="timeline">
-          <span class="line"></span>
-          <div class="timeline-item">
-            <h3>INT-Vision</h3>
-            <p><em>A computer vision project made using <b>python, opencv, SciKitLearn</b>. Detects bored and sleepy faces, meant to be used at offices and schools to estimate productivity. Uses emotion values from <b>Azure api</b> and classifies them using <b>SVM classifier</b>.</em></p>
-            <ul>
-              <li><a href="https://github.com/Vibhor199/Int_Vision">https://github.com/Vibhor199/Int_Vision</a></li>
-                            <li>Video Demo</li>
-              <li><a href="https://youtu.be/SggBRKqACWs">https://youtu.be/SggBRKqACWs</a></li>
 
-	    </ul>
-          </div>
-        </div>
         <div class="timeline">
           <span class="line"></span>
           <div class="timeline-item">
-            <h3>Criminal Database Visualizer</h3>
-            <p><em>DBMS project with <b>d3.js</b> on frontend <b>DJANGO</b> on backend focusing on ease of use, clean design and <b>normalization</b> of database</em></p>
+            <h4>Tasty Express(Mini Project PHP)</h4>
+            <p><em>PHP based web project making use of SQL as backend to implement a simple food ordering website</em></p>
             <ul>
-              <li><a href="https://github.com/Vibhor199/crimeDB">https://github.com/Vibhor199/crimeDB</a></li>
+              <li><a href="https://github.com/Vibhor199/foodorder">https://github.com/Vibhor199/foodorder</a></li>
             </ul>
           </div>
         </div>
-        <div class="timeline">
-          <span class="line"></span>
-          <div class="timeline-item">
-            <h3>Solar Energy Estimation</h3>
-            <p><em>Local winning project at <b>Nasa Space Apps</b> Challenge Bangalore, aims at providing power estimates for solar power usage and adoption</em></p>
-            <ul>
-              <li><a href="https://github.com/Vibhor199/space">https://github.com/Vibhor199/space</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="timeline">
-          <span class="line"></span>
-          <div class="timeline-item">
-            <h3>Tank War JavaScript game</h3>
-            <p><em>Simple JavaScript game using <b>Phazor</b> library</em></p>
-            <ul>
-              <li><a href="https://vibhor199.github.io/Tank2DGameInPhaser/">https://vibhor199.github.io/Tank2DGameInPhaser/</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="timeline">
-          <span class="line"></span>
-          <div class="timeline-item">
-            <h3>OPEN-GL graphics project (Freeglut3)</h3>
-            <p><em>College Project for demonstration of GLUT library(<b>OpenGL</b>), interactive cube filled with gas molecules.</em></p>
-            <ul>
-              <li><a href="https://github.com/Vibhor199/CGProject">https://github.com/Vibhor199/CGProject</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="timeline">
-          <span class="line"></span>
-          <div class="timeline-item">
-            <h3>Other Work Samples</h3>
-            <ul>
-              <li><b>Mask RCNN for object detection on Nucleus dataset</b></li>
-              <li><a href="https://github.com/Vibhor199/MaskRCNN-on-Nucleus">https://github.com/Vibhor199/MaskRCNN-on-Nucleus</a></li>
 
-              <li><b>Android recycler view</b></li>
-              <li><a href="https://github.com/Vibhor199/recyclerview">https://github.com/Vibhor199/recyclerview</a></li>
 
-            </ul>
-          </div>
-        </div>
       </section>
-            <section>
-              <h2>Achievements</h2>
-              <div class="timeline">
-                <span class="line"></span>
-                <div class="timeline-item">
-                  2nd prize Winner at ValuePitch Hackathon, Bangalore
-                </div>
-              </div>
-              <div class="timeline">
-                <span class="line"></span>
-                <div class="timeline-item">
-                  Winner at NASA Space apps challenge, Bangalore Level
-                </div>
-              </div>
-            </section>
+
       <section>
         <h2>Education</h2>
         <div class="timeline">
@@ -125,8 +129,8 @@
             <h3>Bachelor of Engineering <small style="color: #555">Pursuing</small> </h3>
             <p><em>Sir M Visvesvaraya Institute of Technology, Bangalore, Karnataka</em></p>
             <ul>
-              <li>Average CGPA 1st and 2nd Year and 3rd year beginning semester: 7.4/10</li>
-              <li>Graduation Year: 2020</li>
+              <li>CGPA 1st to 7th sem 7.2/10</li>
+              <li>Expected Graduation: July/August 2020</li>
             </ul>
           </div>
         </div>
@@ -136,7 +140,7 @@
             <h3>Schooling</h3>
             <p><em>Dr. V.S.E.C Kidwai Nagar</em></p>
             <ul>
-              <li>10th: 89.5%  12th: 90%</li>
+              <li>10th: 89.5%  12th: 89%</li>
               <li>Passing Year: 2015</li>
             </ul>
           </div>
@@ -147,11 +151,11 @@
 
     <div class="column">
       <section>
-        <h2>Contact Me</h2>
+        <h2>Contacts/Profiles</h2>
         <div class="timeline condensed">
           <span class="line"></span>
           <div class="timeline-item">
-            <p style="font-size: 15px">+91-9741117346</p>
+            <p style="font-size: 15px">+91-7483242741</p>
           </div>
           <div class="timeline-item">
             <p style="font-size: 13px"><b>vibhorsharma197@gmail.com</b></p>
@@ -170,7 +174,7 @@
       <section>
         <h2>Skills</h2>
         <ul>
-        <li><strong>Core</strong></li>
+        <strong>Core</strong>
         <li>Databases(relational-SQL and object based)</li>
     	  <li>Algorithms</li>
     	  <li>Networks</li>
@@ -178,26 +182,68 @@
         <li>Software design and Architecture</li>
         <li>Object Oriented Programming</li>
         <li>Operating Systems</li>
-        <li>LINUX</li>
-        <li>ML Algorithms(Neural Networks, K-means, SVM, Logistic and Linear Regression etc..from AndrewNG courses)</li>
-        <li><br></li>
-        <li><strong>Hands-on experience with</strong></li>
-        <li>Git</li>
-        <li>Tensorflow python</li>
-        <li>PHP, Node.js, DJANGO</li>
+        <li>Machine Learning Algorithms (Logistic Regression, SVM, Decision Trees, Linear Regression, KNN, DB-Scan, K-Means)</li>
+        <li>Deep Neural Networks, GAN, RNN, CNN fundamentals, Convolution, Pooling, Activation Function, Regularization</li>
+        <li>Object Detection FastRCNN, MaskRCNN, YOLO etc</li>
+        <br>
+        <strong>Hands-on experience with</strong>
+        <li>Git, Pycharm, Postman, CI/CD, Flake8, Pylint, Pytest</li>
+        <li>Flask, DJANGO, PHP, Node.js</li>
+        <li>SQL Alchemy, Marshmallow, Flask Rest Plus</li>
         <li>Amazon AWS(Python sdk boto3) and Azure</li>
-        <li>Full Stack Development</li>
-        <li>ComputerVision(OpenCV other Deep-nets, CNN application like vgg16 etc)</li>
+        <li>Tensorflow and Keras in python</li>
+        <li>ComputerVision(OpenCV, PILLOW)</li>
+        <li>Data Science</li>
+        <li>Web Scraping using Selenium, bs4, Scarpy</li>
         <li>Android App Development</li>
-        <li><br></li>
-        <li><strong>Libraries</strong></li>
-          <li>Python: Scikit-Learn, OpenCV, Numpy, MatplotLib, Tensorflow and Keras(on top of Tensorflow)</li>
-          <li>JavaScript:Bootstrap, D3.JS, React.js, Phazor, Jquery and Ajax</li>
-          <li><br></li>
-          <li><strong>Languages Used</strong></li>
-          <li>Java, C++(In order of expertise)</li>
-          <li>Python, JavaScript</li>
+        <br>
+          <strong>Libraries</strong>
+          <li>Python: Scikit-Learn,Pandas, OpenCV, Pillow, Numpy, MatplotLib, Seaborn, Tensorflow and Keras(on top of Tensorflow),Selenium, Python Requests, Beautiful Soup</li>
+          <li>Front End JavaScript:Bootstrap, D3.JS, React.js, Phazor, Jquery and Ajax</li>
+          <br>
+          <strong>Languages Used</strong>
+          <li>Python, Java, JavaScript, C++(In order of expertise)</li>
         </ul>
+      </section>
+      <section>
+        <h2>Achievements</h2>
+        <ul>
+            <li>2nd prize Winner at ValuePitch Hackathon, Bangalore</li>
+          <span class="line"></span>
+            <li>Winner at NASA Space apps challenge, Bangalore Level</li>
+        </ul>
+      </section>
+      <section>
+        <h2>Other Work Samples</h2>
+        <div class="timeline">
+          <span class="line"></span>
+          <div class="timeline-item">
+            Mask RCNN for object detection on Nucleus dataset
+            <a href="https://github.com/Vibhor199/MaskRCNN-on-Nucleus">https://github.com/Vibhor199/MaskRCNN-on-Nucleus</a>
+          </div>
+        </div>
+        <div class="timeline">
+          <span class="line"></span>
+          <div class="timeline-item">
+            Android recycler view
+            <a href="https://github.com/Vibhor199/recyclerview">https://github.com/Vibhor199/recyclerview</a>
+          </div>
+        </div>
+        <div class="timeline">
+          <span class="line"></span>
+          <div class="timeline-item">
+            Tank War JavaScript Game(Phazor library)
+            <a href="https://vibhor199.github.io/Tank2DGameInPhaser/">https://vibhor199.github.io/Tank2DGameInPhaser/</a>
+          </div>
+        </div>
+        <div class="timeline">
+          <span class="line"></span>
+          <div class="timeline-item">
+            OPEN-GL graphics project (Freeglut3)
+            <a href="https://github.com/Vibhor199/CGProject">https://github.com/Vibhor199/CGProject</a>
+          </div>
+        </div>
+
       </section>
     </div>
   </div>
